Regression: Skin and Miffor modifiers cause mesh collapse #108880

Closed
opened 2023-06-12 11:31:20 +02:00 by Andrew Ryan · 3 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61

Blender Version
Broken: version: 3.6.0 Beta, branch: blender-v3.6-release, commit date: 2023-06-10 13:37, hash: d79524e3098e
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-06-12 00:30, hash: f4d6edd4764a
Worked: (version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: e1ccd9d4a1d3)

Caused by 4369627e71

Short description of error
Combination of Skin and Mirror modifiers leads to collapse of the generated mesh
and 'No valid root vertex found' error ,
if the Skin modifier root vertex lies on the mirror axis.

Exact steps for others to reproduce the error

  1. Create a vertex and extrude it a few times.
  2. Add Mirror modifier (move mirror modifier to the top of the stack).
  3. Add Skin modifier and mark a vertex as root.

If the root vertex lies on the mirror axis the mesh collapses
and You get an 'No valid root vertex found' error.

If you mark as root some other vertex not on mirror axis the modifier works correctly.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61 **Blender Version** Broken: version: 3.6.0 Beta, branch: blender-v3.6-release, commit date: 2023-06-10 13:37, hash: `d79524e3098e` Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-06-12 00:30, hash: `f4d6edd4764a` Worked: (version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: `e1ccd9d4a1d3`) Caused by 4369627e7143e7c9c7df75e42ec8eb2e8370fd34 **Short description of error** Combination of Skin and Mirror modifiers leads to collapse of the generated mesh and 'No valid root vertex found' error , if the Skin modifier root vertex lies on the mirror axis. **Exact steps for others to reproduce the error** 1. Create a vertex and extrude it a few times. 2. Add Mirror modifier (move mirror modifier to the top of the stack). 3. Add Skin modifier and mark a vertex as root. If the root vertex lies on the mirror axis the mesh collapses and You get an 'No valid root vertex found' error. If you mark as root some other vertex not on mirror axis the modifier works correctly.
Andrew Ryan added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-06-12 11:31:20 +02:00
Iliya Katushenock added the
Interest
Modeling
Interest
Modifiers
labels 2023-06-12 11:41:30 +02:00
Iliya Katushenock changed title from Skin modifier mesh collapse to Regression: Skin and Miffor modifiers cause mesh collapse 2023-06-12 11:42:06 +02:00
Member

Can confirm, will check.

Can confirm, will check.
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-06-12 11:45:00 +02:00
Iliya Katushenock added
Module
Modeling
and removed
Interest
Modeling
labels 2023-06-12 12:42:44 +02:00
Member

Caused by 4369627e71

CC @mano-wii

Caused by 4369627e7143e7c9c7df75e42ec8eb2e8370fd34 CC @mano-wii
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2023-06-12 12:57:39 +02:00

This is a tricky one to fix.
Before, although it worked well for mirror, for other forms of weld it could cause problems.
For example, each geometry island should only have 1 root, but weld can merge islands. In these cases which root should remain?
Also, apparently there isn't an API for Mesh that detects islands (that's just for BMesh).

(Perhaps, the solution is to resolve only for Mirror).

This is a tricky one to fix. Before, although it worked well for mirror, for other forms of weld it could cause problems. For example, each geometry island should only have 1 root, but weld can merge islands. In these cases which root should remain? Also, apparently there isn't an API for Mesh that detects islands (that's just for BMesh). (Perhaps, the solution is to resolve only for Mirror).
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-13 00:07:19 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108880
No description provided.