Fix #108880: Skin and Miffor modifiers cause mesh collapse